@@ -12,7 +12,7 @@
     <script type="text/javascript" src="/js/scw.js"></script>
     <script type="text/javascript" src="/js/prototype.js"></script>
     <script type="text/javascript" src="/js/scriptaculous.js"></script>
-    <script type="text/javascript" src="/openflights.js?version=20090122"></script>
+    <script type="text/javascript" src="/openflights.js?version=20090123"></script>
   </head>
 
   <body>
